--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,12 @@
 			<version>0.8.3</version>
 		</dependency>
 	</dependencies>
-
+<distributionManagement>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://13.233.140.75:8081/nexus/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
